# facet

./: CHANGELOG.md  Cargo.toml
cinereus/: Cargo.toml
facet/: Cargo.toml
facet-args/: Cargo.toml
facet-asn1/: Cargo.toml
facet-assert/: Cargo.toml
facet-atom/: Cargo.toml
facet-axum/: Cargo.toml
facet-bloatbench/: Cargo.toml
facet-core/: Cargo.toml
facet-core/src/impls/crates/: dashu_int.rs  mod.rs
facet-csv/: Cargo.toml
facet-default/: Cargo.toml
facet-diff/: Cargo.toml
facet-diff-core/: Cargo.toml
facet-error/: Cargo.toml
facet-format/: Cargo.toml
facet-format-suite/: Cargo.toml
facet-html/: Cargo.toml
facet-html-dom/: Cargo.toml
facet-json/: Cargo.toml
facet-json-schema/: Cargo.toml
facet-kdl/: Cargo.toml
facet-macro-parse/: Cargo.toml
facet-macro-types/: Cargo.toml
facet-macros/: Cargo.toml
facet-macros-impl/: Cargo.toml
facet-miette/: Cargo.toml
facet-msgpack/: Cargo.toml
facet-path/: Cargo.toml
facet-perf-shootout/: Cargo.toml
facet-postcard/: Cargo.toml
facet-pretty/: Cargo.toml
facet-reflect/: Cargo.toml
facet-shapelike/: Cargo.toml
facet-showcase/: Cargo.toml
facet-singularize/: Cargo.toml
facet-solver/: Cargo.toml
facet-svg/: Cargo.toml
facet-testhelpers/: Cargo.toml
facet-testhelpers-macros/: Cargo.toml
facet-tokio-postgres/: Cargo.toml
facet-toml/: Cargo.toml
facet-typescript/: Cargo.toml
facet-urlencoded/: Cargo.toml
facet-validate/: Cargo.toml
facet-value/: Cargo.toml
facet-xdr/: Cargo.toml
facet-xml/: Cargo.toml
facet-yaml/: Cargo.toml
tools/benchmark-defs/: Cargo.toml
tools/perf-index-generator/: Cargo.toml
xtask/: Cargo.toml
