[workspace]
members = [
    # core
    "facet-core",
    "facet",

    # derive macro
    "facet-macros-impl",
    "facet-macros",

    # macro ecosystem (plugin support)
    "facet-macro-types",
    "facet-macro-parse",
    # "facet-macro-template",  # TODO: re-enable when plugin system is ready

    # error derive plugin
    "facet-error",

    # diagnostic derive plugin (miette integration)
    "facet-miette",

    # default derive plugin
    "facet-default",

    # reflection
    "facet-reflect",

    # constraint solver
    "facet-solver",

    # test helpers
    "facet-testhelpers",
    "facet-testhelpers-macros",

    # pretty printing
    "facet-pretty",

    # misc.
    "facet-args",
    "facet-urlencoded",

    # web framework integrations
    "facet-axum",

    # utilities
    "cinereus",
    "facet-diff-core",
    "facet-diff",
    "facet-assert",
    "facet-value",
    "facet-singularize",
    "facet-path",
    "facet-validate",

    # showcase infrastructure
    "facet-showcase",

    # dev tooling
    "facet-bloatbench",
    "facet-perf-shootout",
    "xtask",
    "tools/benchmark-defs",
    "tools/benchmark-generator",
    "tools/benchmark-analyzer",
    "tools/metrics-tui",
    "tools/perf-index-generator",

    "facet-shapelike",

    # format crates
    "facet-format",
    "facet-json",
    "facet-postcard",
    "facet-msgpack",
    "facet-xml",
    "facet-svg",
    "facet-toml",
    "facet-yaml",
    "facet-format-suite",
    "facet-asn1",
    "facet-csv",
    "facet-kdl",
    "facet-xdr",
    "facet-html",
    "facet-html-dom",
    "facet-atom",
    "facet-json-schema",
    "facet-typescript",
    "facet-tokio-postgres",
]
exclude = [
    # proto-attr experiment uses nightly features
    "proto-attr",
]
resolver = "3"

[workspace.package]
version = "0.42.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"

[workspace.dependencies]
arborium = { version = "^2.4.5", default-features = false, features = ["lang-json"] }
autocfg = "^1.5.0"
bolero = "^0.13.4"
boxen = "^0.1.3"
bytes = { version = "^1.11.0", default-features = false }
bytestring = { version = "^1.4.0", default-features = false }
camino = "^1.2.1"
compact_str = { version = "^0.9.0", default-features = false }
chrono = { version = "^0.4.42", default-features = false, features = ["alloc"] }
dashu-int = { version = "^0.4.1", default-features = false }
divan = "^0.1.21"
eyre = "^0.6.12"
http = "^1.4.0"
indexmap = { version = "^2.12.1", default-features = false }
indextree = "^4.7.4"
indoc = "^2.0.7"
insta = "^1.44.3"
jiff = "^0.2.16"
log = { version = "^0.4.29", features = ["std"] }
miette = { version = "^7.6.0", default-features = false, features = ["fancy-no-backtrace"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "^1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "^1.0.145", features = ["alloc"] }
smartstring = { version = "^1.0.1", default-features = false }
smol_str = { version = "^0.3.4", default-features = false }
static_assertions = "^1.1.0"
strsim = "0.11"
tempfile = "^3.23.0"
time = { version = "^0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "^1.48.0", default-features = false, features = ["macros"] }
tracing = { version = "^0.1.43", default-features = false, features = ["std"] }
ulid = "^1.2.1"
unsynn = "^0.3.0"
uuid = "^1.19.0"
rust_decimal = "^1.38.0"

# Allow the facet_no_doc cfg in generated code
# See: https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }

# Fuzzing profile for cargo-bolero
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
