[package]
name = "cinereus"
version = "0.43.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
description = "GumTree-style tree diffing with Chawathe edit script generation"
repository = "https://github.com/facet-rs/facet"
keywords = ["tree", "diff", "gumtree", "chawathe", "edit-script"]
categories = ["algorithms", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
indextree = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
