[package]
name = "facet-args"
version = "0.43.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-args"
description = "Type-safe command-line argument parsing powered by Facet reflection"
documentation = "https://docs.rs/facet-args"
keywords = ["cli", "args", "parser", "facet", "command-line"]
categories = ["command-line-interface"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata.cargo-shear]
ignored = ["facet-pretty"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
heck = "0.5.0"
miette = { version = "7.6.0", default-features = false }
owo-colors = "4"
tracing = { workspace = true }

[dev-dependencies]
facet = { path = "../facet", features = ["all-impls"] }
facet-pretty = { path = "../facet-pretty" }
facet-showcase = { path = "../facet-showcase" }
insta = { workspace = true }
miette = { workspace = true }

[features]
default = ["rich-diagnostics"]
rich-diagnostics = []
# Include doc comments in help generation (enables facet/doc)
doc = ["facet/doc"]

[lints]
workspace = true
