[package]
name = "facet-assert"
version = "0.43.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Pretty assertions for Facet types - no PartialEq required"
keywords = ["facet", "assert", "testing", "diff", "comparison"]
categories = ["development-tools", "development-tools::testing"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-diff = { path = "../facet-diff", version = "0.43.0" }
facet-diff-core = { path = "../facet-diff-core", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", features = ["miette"] }

[dev-dependencies]
facet = { path = "../facet" }
facet-showcase = { path = "../facet-showcase" }
owo-colors = "4"

[lints]
workspace = true
