[package]
name = "facet-atom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom Syndication Format (RFC 4287) types for facet-xml"
keywords = ["atom", "feed", "syndication", "rss", "facet"]
categories = ["encoding", "parsing", "web-programming"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1" }
facet-xml = { path = "../facet-xml", version = "0.42.1" }

[dev-dependencies]
indoc = { workspace = true }

[lints]
workspace = true
