[package]
name = "facet-bloatbench"
version = "0.41.0"
edition = "2024"
publish = false
description = "Binary size benchmarking tool for measuring compile-time and code size impact of Facet features"
keywords = ["benchmark", "bloat", "binary-size", "facet", "testing"]
categories = ["development-tools::testing", "development-tools::profiling"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0", optional = true, default-features = false, features = ["std"] }
facet-json = { path = "../facet-json", optional = true, default-features = false }

serde = { workspace = true, optional = true, features = ["rc"] }
serde_json = { workspace = true, optional = true }

[features]
default = []
facet = ["dep:facet", "dep:facet-json"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "facet-bloatbench"
path = "src/main.rs"

[lints]
workspace = true
