[package]
name = "facet-core"
version = "0.42.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core reflection traits and types for the facet ecosystem - provides the Facet trait, Shape metadata, and type-erased pointers"
keywords = ["reflection", "introspection", "metadata", "facet", "shape"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
auto-traits = []
default = ["std"]
# Enable standard library support
std = ["alloc"]
# Enable allocation support (required for facet-core to function)
alloc = []
# Provide Facet trait implementations for NonZero<T> types
nonzero = []
# Provide Facet trait implementations for network types (SocketAddr, IpAddr, etc.)
net = []
# Provide Facet trait implementations for camino::Utf8Path and camino::Utf8PathBuf
camino = ["dep:camino", "alloc"]
# Provide Facet trait implementations for ordered_float types
ordered-float = ["dep:ordered-float"]
# Provide Facet trait implementations for uuid::Uuid
uuid = ["alloc", "dep:uuid"]
# Provide Facet trait implementations for ulid::Ulid
ulid = ["alloc", "dep:ulid"]
# Provide Facet trait implementations for time crate types
time = ["alloc", "dep:time"]
# Provide Facet trait implementations for chrono crate types
chrono = ["alloc", "dep:chrono", "chrono/clock"]
# Provide Facet trait implementations for url::Url
url = ["alloc", "dep:url"]
# Provide Facet trait implementations for jiff crate types
jiff02 = ["alloc", "dep:jiff"]
# Provide Facet trait implementations for bytes::Bytes
bytes = ["alloc", "dep:bytes"]
# Provide Facet trait implementations for bytestring::ByteString
bytestring = ["alloc", "dep:bytestring"]
# Provide Facet trait implementations for compact_str::CompactString
compact_str = ["alloc", "dep:compact_str"]
# Provide Facet trait implementations for num_complex::Complex
num-complex = ["dep:num-complex"]
# Provide Facet trait implementations for smartstring::SmartString
smartstring = ["alloc", "dep:smartstring"]
# Provide Facet trait implementations for smol_str::SmolStr
smol_str = ["alloc", "dep:smol_str"]
# Provide Facet trait implementations for ruint::Uint and ruint::Bits
ruint = ["alloc", "dep:ruint", "ruint?/alloc"]
# Provide Facet trait implementations for indexmap::IndexMap and indexmap::IndexSet
indexmap = ["alloc", "dep:indexmap"]
# Provide Facet trait implementations for rust_decimal::Decimal
rust_decimal = ["alloc", "dep:rust_decimal"]
# Provide Facet trait implementations for dashu_int::IBig and dashu_int::UBig
dashu-int = ["alloc", "dep:dashu-int"]

# Provide Facet trait implementations for tuples up to size 12. Without it,
# Facet is only implemented for tuples up to size 4.
tuples-12 = []

# Provide Facet trait implementations for function pointers.
fn-ptr = []

# Provide Facet trait implementations for portable SIMD types (requires nightly).
# This adds 84 type implementations which increases compile time.
simd = []

[build-dependencies]
autocfg = { workspace = true }

[dependencies]
bytes = { workspace = true, optional = true }
bytestring = { workspace = true, optional = true }
camino = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
impls = { version = "1" }
indexmap = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
num-complex = { version = "0.4.6", optional = true, default-features = false }
ordered-float = { version = "5.0.0", optional = true, default-features = false }
ruint = { version = "1.17.0", optional = true, default-features = false }
time = { workspace = true, optional = true, features = ["macros"] }
ulid = { workspace = true, optional = true }
smartstring = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true }
url = { version = "2.5.4", optional = true, default-features = false }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
dashu-int = { workspace = true, optional = true }


[dev-dependencies]
facet-testhelpers = { path = "../facet-testhelpers" }

[lints]
workspace = true
