[package]
name = "facet-diff-core"
version = "0.43.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Core types and helpers for diff rendering in Facet"
keywords = ["diff", "serialization", "reflection", "facet"]
categories = ["encoding", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
confusables = "0.1"
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-pretty = { path = "../facet-pretty", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
indextree = { workspace = true }
owo-colors = "4"
palette = { version = "0.7", default-features = false, features = ["std"] }
tracing = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
facet = { path = "../facet", features = ["all-impls", "doc"] }
facet-diff = { path = "../facet-diff" }
facet-value = { path = "../facet-value" }
facet-xml = { path = "../facet-xml" }

[lints]
workspace = true
