[package]
name = "facet-diff"
version = "0.43.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
description = "Structural diffing for Facet types with human-readable output - no PartialEq required"
keywords = ["facet", "diff", "comparison", "reflection", "data-structures"]
categories = ["development-tools", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []

[dependencies]
cinereus = { path = "../cinereus", version = "0.43.0" }
facet = { path = "../facet", version = "0.43.0" }
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-diff-core = { path = "../facet-diff-core", version = "0.43.0" }
facet-pretty = { path = "../facet-pretty", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
log = { workspace = true }
owo-colors = "4"

[dev-dependencies]
boxen = { workspace = true }
facet-xml = { path = "../facet-xml", features = ["diff"] }
facet-showcase = { path = "../facet-showcase" }
facet-testhelpers = { path = "../facet-testhelpers" }
facet-value = { path = "../facet-value" }
insta = { workspace = true }
owo-colors = "4"

[lints]
workspace = true
