[package]
name = "facet-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Serializer/Deserializer traits for facet's next-generation format architecture with JIT compilation support"
keywords = ["serialization", "deserialization", "jit", "facet", "reflection"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-path = { path = "../facet-path", version = "0.43.0", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.43.0" }
facet-solver = { path = "../facet-solver", version = "0.43.0", default-features = false }
facet-singularize = { path = "../facet-singularize", version = "0.43.0", optional = true }
facet-validate = { path = "../facet-validate", version = "0.42.1", optional = true }

# Optional diagnostic support
miette = { version = "7", optional = true }

# JIT compilation (optional)
cranelift = { version = "0.127", optional = true }
cranelift-jit = { version = "0.127", optional = true }
cranelift-module = { version = "0.127", optional = true }
cranelift-native = { version = "0.127", optional = true }
parking_lot = { version = "0.12", optional = true }
museair = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]

[features]
default = ["singularize"]
singularize = ["dep:facet-singularize"]
# Network types (IpAddr, SocketAddr, etc.)
net = ["facet-core/net"]
# Rich error diagnostics with miette
miette = ["dep:miette", "facet-reflect/miette"]
# Validation support - run validators on fields during deserialization
validate = ["dep:facet-validate"]
# JIT-compiled deserialization using Cranelift - works with any FormatParser
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native", "dep:parking_lot", "dep:museair", "dep:libc"]
# Alias to unblock workspace-level `--features cranelift`
cranelift = ["jit"]
# compact_str support
compact_str = ["facet-core/compact_str"]

[lints]
workspace = true
