[package]
name = "facet-html-dom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed HTML DOM element definitions for facet-html"
keywords = ["html", "dom", "facet", "elements", "html5"]
categories = ["encoding", "parsing", "web-programming"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
facet-html = { path = "../facet-html", version = "0.42.1" }

[lints]
workspace = true
