[package]
name = "facet-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML parsing for facet using the format architecture with html5gum"
keywords = ["html", "parsing", "facet", "streaming", "html5"]
categories = ["encoding", "parsing", "web-programming"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1" }
facet-xml = { path = "../facet-xml", version = "0.42.1" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0" }

# HTML parsing - WHATWG-compliant tokenizer
html5gum = "0.8"
zmij = { version = "1", optional = true }
itoa = { version = "1", optional = true }

[dev-dependencies]
facet = { path = "../facet", features = ["doc"] }
facet-diff = { path = "../facet-diff" }
facet-assert = { path = "../facet-assert" }
facet-html-dom = { path = "../facet-html-dom" }
facet-showcase = { path = "../facet-showcase" }
datatest-stable = "0.3"
indoc.workspace = true

[[test]]
name = "roundtrip"
harness = false

[features]
default = []
fast = ["dep:zmij", "dep:itoa"]

[lints]
workspace = true
