[package]
name = "facet-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON serialization for facet using the new format architecture"
keywords = ["json", "serialization", "facet", "parsing", "streaming"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
corosensei = { version = "0.3", optional = true }
facet = { path = "../facet", version = "0.43.0", default-features = false }
itoa = { version = "1", optional = true }
memchr = "2"
zmij = { version = "1", optional = true }
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.43.0" }
futures-io = { version = "0.3", optional = true }
lexical-parse-float = { version = "1.0.5", optional = true }
lexical-parse-integer = { version = "1.0.5", optional = true }
miette = { workspace = true, optional = true }
tokio = { version = "1", default-features = false, optional = true, features = ["io-util"] }

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
brotli = "7"
compact_str = { workspace = true }
facet = { path = "../facet", features = ["doc", "net", "compact_str", "smol_str"] }
facet-format = { path = "../facet-format", features = ["jit", "net"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
facet-format-suite = { path = "../facet-format-suite", features = ["third-party", "net", "tokio"] }
indoc = { workspace = true }
libtest-mimic = "0.8.1"
smol_str = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[[test]]
name = "format_suite"
harness = false

[[test]]
name = "generated_benchmark_tests"

[[example]]
name = "profile_jit_vec"
required-features = ["jit"]

[features]
default = []
fast = ["lexical-parse", "dep:itoa", "dep:zmij"]
lexical-parse = ["dep:lexical-parse-float", "dep:lexical-parse-integer"]
streaming = ["dep:corosensei", "std"]
std = []
tokio = ["streaming", "dep:tokio"]
futures-io = ["streaming", "dep:futures-io"]
jit = ["facet-format/jit"]
net = ["facet-format/net", "facet-core/net"]

# Axum HTTP integration
axum = ["std", "dep:axum-core", "dep:http", "dep:http-body-util", "dep:mime"]

# Enable miette diagnostics for rich error messages
miette = ["dep:miette", "facet-reflect/miette"]

# Field validation during deserialization
validate = ["facet-format/validate"]

# compact_str support
compact_str = ["facet/compact_str", "facet-format/compact_str"]

[lints]
workspace = true
