[package]
name = "facet-kdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "KDL serialization for facet using the new format architecture - successor to facet-kdl"
keywords = ["kdl", "serialization", "facet", "parsing", "config"]
categories = ["encoding", "parsing", "config"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0", default-features = false }
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1", features = ["miette"] }
facet-path = { path = "../facet-path", version = "0.43.0", features = ["pretty"] }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
kdl = "6.5.0"
miette = "7"
zmij = { version = "1", optional = true }
itoa = { version = "1", optional = true }

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
facet = { path = "../facet", features = ["doc", "net"] }
facet-showcase = { path = "../facet-showcase" }

[features]
default = []
std = []
fast = ["dep:zmij", "dep:itoa"]
net = ["facet-format/net", "facet-core/net"]

# Axum HTTP integration
axum = ["std", "dep:axum-core", "dep:http", "dep:http-body-util"]

[lints]
workspace = true
