[package]
name = "facet-miette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive miette::Diagnostic for facet types - rich error reporting with source spans"
keywords = ["facet", "miette", "diagnostic", "error", "derive"]
categories = ["rust-patterns", "development-tools"]

[package.metadata.cargo-shear]
# facet-error is used via #[facet(derive(Error, ...))] macro expansion
ignored = ["facet-error"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
miette = { workspace = true }

[dev-dependencies]
facet = { path = "../facet" }
facet-error = { path = "../facet-error" }

[lints]
workspace = true
