[package]
name = "facet-msgpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MsgPack binary format for facet"
keywords = ["msgpack", "binary", "serialization", "facet"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0" }
miette = { workspace = true }

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
divan = { workspace = true }
facet = { path = "../facet", features = ["all-impls"] }
facet-format = { path = "../facet-format", features = ["jit", "net"] }
facet-format-suite = { path = "../facet-format-suite", features = ["third-party", "msgpack", "net"] }
libtest-mimic = "0.8"
rmp-serde = "1"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"

[[bench]]
name = "vs_msgpack"
harness = false

[[test]]
name = "format_suite"
harness = false

[features]
default = []
std = []
jit = ["facet-format/jit"]
net = ["facet-format/net", "facet-core/net"]

# Axum HTTP integration
axum = ["std", "dep:axum-core", "dep:http", "dep:http-body-util"]

[lints]
workspace = true
