[package]
name = "facet-path"
version = "0.43.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Path tracking for navigating Facet type structures"
keywords = ["facet", "path", "reflection", "error-reporting"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = ["alloc", "facet-core/std"]
alloc = ["facet-core/alloc"]
pretty = ["dep:facet-pretty", "dep:miette", "dep:miette-arborium", "dep:arborium"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0", default-features = false }
facet-pretty = { path = "../facet-pretty", version = "0.43.0", optional = true }
miette = { version = "7", optional = true, default-features = false, features = ["fancy-no-backtrace"] }
miette-arborium = { version = "2.4.5", optional = true }
arborium = { workspace = true, features = ["lang-rust"], optional = true }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = { workspace = true }

[lints]
workspace = true
