[package]
name = "facet-perf-shootout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Performance benchmarks comparing facet formats against reference implementations"
publish = false

[package.metadata]
# gungraun not used yet (placeholder benchmark file)
cargo-shear = { ignored = ["gungraun"] }

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
serde = { workspace = true, features = ["derive", "std"] }

# Facet crates (needed by bench_ops)
facet-format = { path = "../facet-format", version = "0.42.1", optional = true }
facet-json = { path = "../facet-json", version = "0.42.1", features = ["fast"] }
facet-postcard = { path = "../facet-postcard", version = "0.42.1" }

# Reference implementations (needed by bench_ops)
serde_json = { workspace = true }
postcard = { version = "1", features = ["alloc"] }

# Decompression for large JSON files
brotli = "7"

[dev-dependencies]
# Benchmark runners
divan = { workspace = true }
gungraun = "0.17"

[[bench]]
name = "unified_divan"
harness = false

[[bench]]
name = "unified_gungraun"
harness = false

[[test]]
name = "generated_tests"

[features]
default = []
jit = ["dep:facet-format", "facet-format/jit", "facet-json/jit", "facet-postcard/jit"]

[lints]
workspace = true
