[package]
name = "facet-pretty"
version = "0.43.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pretty-printing for Facet types with syntax highlighting and customizable formatting"
keywords = [
    "pretty-print",
    "formatting",
    "reflection",
    "serialization",
    "visualization",
]
categories = ["development-tools", "visualization", "command-line-utilities"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
alloc = ["facet-core/alloc", "facet-reflect/alloc"] # Enables alloc support
camino = ["alloc", "facet-core/camino"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
owo-colors = "4"

[dev-dependencies]
camino = { workspace = true }
facet = { path = "../facet", features = ["all-impls"] }
facet-showcase = { path = "../facet-showcase" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
