[package]
name = "facet-shapelike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serializable owned versions of Facet shape types - enables persisting and transmitting type metadata"
keywords = ["facet", "reflection", "schema", "serialization", "metadata"]
categories = ["encoding", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]

[dependencies]
facet = { path = "../facet", version = "0.43.0", features = ["all-impls", "doc"] }
facet-core = { path = "../facet-core", version = "0.43.0", features = ["alloc"] }
facet-postcard = { path = "../facet-postcard", version = "0.42.1" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", default-features = false, features = ["miette"] }

[dev-dependencies]
facet-args = { path = "../facet-args" }
facet-assert = { path = "../facet-assert" }
facet-json = { path = "../facet-json" }
facet-kdl = { path = "../facet-kdl" }
facet-xml = { path = "../facet-xml" }
facet-testhelpers = { path = "../facet-testhelpers" }

[lints]
workspace = true
