[package]
name = "facet-showcase"
version = "0.42.0"
edition.workspace = true
rust-version.workspace = true
description = "Unified showcase infrastructure for facet format crates"
homepage = "https://facet.rs"
license.workspace = true
repository.workspace = true
keywords = ["facet", "showcase", "demo"]
categories = ["development-tools"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
arborium = { workspace = true, features = ["lang-kdl", "lang-rust", "lang-xml", "lang-yaml"] }
facet = { path = "../facet", version = "0.43.0", features = ["all-impls", "doc"] }
facet-pretty = { path = "../facet-pretty", version = "0.43.0" }
miette = { workspace = true }
miette-arborium = "2.4.5"

# Terminal colors
owo-colors = "4"

[features]
default = []

[lints]
workspace = true
