[package]
name = "facet-singularize"
version = "0.43.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.89.0"
repository = "https://github.com/facet-rs/facet"
description = "Fast, no-regex English singularization for the facet ecosystem"
keywords = ["singular", "plural", "inflection", "facet"]
categories = ["text-processing"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "singularize"
harness = false

[lints]
workspace = true
