[package]
name = "facet-solver"
version = "0.43.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Constraint solver for facet - resolves type shapes from field names"
keywords = ["reflection", "introspection", "facet", "solver", "serde"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std", "suggestions"]
std = ["alloc"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
suggestions = ["strsim", "alloc"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0", default-features = false }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", default-features = false }
strsim = { workspace = true, optional = true }

[dev-dependencies]
divan = { workspace = true }
facet = { path = "../facet", features = ["all-impls", "doc"] }
json-event-parser = "0.2"
miette = { workspace = true }
thiserror = "2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

[[bench]]
name = "solver"
harness = false

[lints]
workspace = true
