[package]
name = "facet-svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SVG (Scalable Vector Graphics) serialization for Facet types using facet-xml"
keywords = ["svg", "serialization", "facet", "graphics", "vector"]
categories = ["encoding", "parsing", "graphics"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../facet", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1" }
facet-xml = { path = "../facet-xml", version = "0.42.1" }

[dev-dependencies]
datatest-stable = "0.3"
facet-assert = { path = "../facet-assert" }
facet-format = { path = "../facet-format" }
facet-xml = { path = "../facet-xml" }

[[test]]
name = "roundtrip"
harness = false

[lints]
workspace = true
