[package]
name = "facet-testhelpers"
version = "0.43.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["testing", "helpers", "utilities"]
categories = ["development-tools::testing", "development-tools"]
homepage = "https://facet.rs"
description = "A collection of testing helpers and utilities for facet"

[features]

[dependencies]
facet-testhelpers-macros = { version = "0.43.0", path = "../facet-testhelpers-macros" }
log = { workspace = true }
owo-colors = "4.2.2"

[lints]
workspace = true
