[package]
name = "facet-tokio-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deserialize tokio-postgres Rows into any type implementing Facet"
keywords = ["postgres", "tokio-postgres", "facet", "deserialization", "database"]
categories = ["database", "asynchronous"]
homepage = "https://facet.rs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0" }
tokio-postgres = "0.7"
postgres-types = "0.2"
rust_decimal = { workspace = true, optional = true, features = ["db-tokio-postgres"] }

[dev-dependencies]
facet = { path = "../facet" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
uuid = "1"
jiff = "0.2"
chrono = { workspace = true }
time = { workspace = true }

[features]
default = ["std"]
std = []
# Enable integration tests (requires postgres via POSTGRES_HOST/PORT env vars, or docker for testcontainers)
test-postgres = []
# Enable UUID support
uuid = ["facet-core/uuid"]
# Enable jiff timestamp support
jiff02 = ["facet-core/jiff02"]
# Enable chrono timestamp support
chrono = ["facet-core/chrono"]
# Enable time crate support
time = ["facet-core/time"]
# Enable rust_decimal::Decimal support for NUMERIC columns
rust_decimal = ["dep:rust_decimal", "facet-core/rust_decimal"]

[lints]
workspace = true
