[package]
name = "facet-toml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML serialization for facet using the new format architecture - successor to facet-toml"
keywords = ["toml", "serialization", "facet", "parsing"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { path = "../facet-core", version = "0.43.0" }
facet-format = { path = "../facet-format", version = "0.42.1" }
facet-reflect = { path = "../facet-reflect", version = "0.43.0", features = ["miette"] }
miette = { workspace = true }
zmij = { version = "1", optional = true }
itoa = { version = "1", optional = true }

# TOML parsing
toml_parser = { version = "1.0.4", default-features = false, features = ["alloc"] }
toml_writer = { version = "1.0.4", default-features = false, optional = true }

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
facet = { path = "../facet", features = ["doc", "net"] }
facet-format = { path = "../facet-format", features = ["jit", "net"] }
facet-format-suite = { path = "../facet-format-suite", features = ["third-party", "net"] }
facet-value = { path = "../facet-value" }
facet-testhelpers = { path = "../facet-testhelpers" }
libtest-mimic = "0.8.1"
indoc = { workspace = true }

[features]
default = []
std = []
serialize = ["dep:toml_writer"]
jit = ["facet-format/jit"]
fast = ["dep:zmij", "dep:itoa"]
net = ["facet-format/net", "facet-core/net"]

# Axum HTTP integration
axum = ["std", "serialize", "dep:axum-core", "dep:http", "dep:http-body-util"]

[[test]]
name = "format_suite"
harness = false

[lints]
workspace = true
